[project]
name = "02467-css-project-b"
version = "0.1.0"
description = "Project B for 02467 Computational Social Science — Reddit subreddit hyperlink network + text analysis"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "networkx==3.3",
    "nltk>=3.9.4",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-louvain>=0.16",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.6",
]
